feat: add GC part2